@@ -1,3 +1,8 @@
+2010-05-03  Doug Evans  <dje@google.com>
+
+	* event-loop.c (gdb_timer): Delete unused global.
+	(create_timer): Update.
+
 2010-05-03  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* cp-namespace.c (cp_lookup_symbol_imports): Support ALIAS for the
